// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly 1`] = `
<Tooltip
  overlay="copied_action"
  visible={false}
>
  <Button
    className="js-copy-to-clipboard no-select"
    data-clipboard-text="foo"
    innerRef={[Function]}
  >
    copy
  </Button>
</Tooltip>
`;

exports[`should display correctly 2`] = `
<Tooltip
  overlay="copied_action"
  visible={true}
>
  <Button
    className="js-copy-to-clipboard no-select"
    data-clipboard-text="foo"
    innerRef={[Function]}
  >
    copy
  </Button>
</Tooltip>
`;

exports[`should display correctly 3`] = `
<Tooltip
  overlay="copied_action"
  visible={false}
>
  <Button
    className="js-copy-to-clipboard no-select"
    data-clipboard-text="foo"
    innerRef={[Function]}
  >
    copy
  </Button>
</Tooltip>
`;
